--- a/sass/foundation/_mixin.scss
+++ b/sass/foundation/_mixin.scss
@@ -34,3 +34,8 @@
     letter-spacing: $fontspece;
     line-height: $lineheight;
 }
+
+@mixin font_helvetica() {
+    font-family: "Helvetica Neue";
+    font-weight: 500;
+}
