--- a/sass/foundation/_setting.scss
+++ b/sass/foundation/_setting.scss
@@ -31,6 +31,7 @@ $color_gray_bg: #ededed;
 //-----------------------------
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 $font_poppins: "Poppins", sans-serif;
+$font_YuGothic: "游ゴシック", "Yu Gothic", "游ゴシック体", "YuGothic";
 //-----------------------------
 //　common
 //-----------------------------
